modify merge_pheno_with_cov and phewas fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,10 @@ export(phe_as_ext)
 export(phenotypePlot)
 export(phewas_ext)
 export(plotManhattan)
+import(dplyr)
+import(ggplot2)
+import(parallel)
+import(tidyr)
+importFrom(ggrepel,geom_text_repel)
+importFrom(glue,glue)
+importFrom(stats,confint)
